# jugo-leptos

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: cloudflare_pages.yml
macros/: Cargo.toml  lib.rs
src/: app.rs  main.rs  signal_ext.rs
