[package]
name = "jugo-leptos"
version = "0.1.0"
edition = "2021"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
derive_more = "=0.99.17"
wasm-bindgen = "=0.2.87"
console_log = "=1.0.0"
console_error_panic_hook = "=0.1.7"
log = "=0.4.20"

leptos = { version = "=0.4.10", features = ["csr"] }
leptos_meta = { version = "=0.4.10", features = ["csr"] }
# leptos_router = { version = "=0.4.10", features = ["csr"] }

rand = "=0.8.5"
rand_xoshiro = "=0.6.0"
base64 = "=0.21.4"
jugo = { git = "https://github.com/hiraginoyuki/jugo", rev = "2b67017" }
phf = { version = "=0.11.2", features = ["macros"] }
